# notification-service

./: pyproject.toml
src/app/application/interactors/: activity_interactors.py
src/app/application/interfaces/: activity_interface.py
src/app/domain/base/: entity.py
src/app/domain/entities/: activity_entity.py
src/app/domain/notification/: entity.py  value_objects.py
